<resources>
    <string name="app_name">Parikrama</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="answer_hint">Your answer here</string>
    <string name="name_hint">Name</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="area_hint">Area</string>
    <string name="members_hint">Family members</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="intro_text">First, tell us something about you:</string>
    <string name="survey_activity_name">Take Survey</string>
</resources>
